[package]
name = "cnctd_aws"
version = "0.1.2"
edition = "2021"
authors = ["Connected Dot Inc.", "Kyle Ebner <kyle@cnctd.world>"]
description = "Wrapper around AWS methods"
repository = "https://github.com/Connected-Dot/cnctd_aws"
license = "MIT"
keywords = ["module"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
aws-config = { version = "1.1.10", features = ["behavior-version-latest"] }
aws-sdk-secretsmanager = "1.21.0"
aws-types = "1.1.9"
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
getrandom = "=0.2.14"