[package]
name = "cnctd_aws"
version = "0.1.10"
edition = "2021"
authors = ["Connected Dot Inc.", "Kyle Ebner <kyle@cnctd.world>"]
description = "Wrapper around AWS methods"
repository = "https://github.com/Connected-Dot/cnctd_aws"
license = "MIT"
keywords = ["module"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
aws-config = { version = "1.1.10", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.23.0"
aws-sdk-secretsmanager = "1.21.0"
aws-types = "1.1.9"
futures = "0.3.30"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
rust-s3 = { version = "0.33.0", features = ["no-verify-ssl"] }
cloudfront_sign = "0.3.0"
urlencoding = "1.0.1"
